# draughts

./: CMakeLists.txt  Jamroot  README.md  scan.ini  setup.py
examples/: count_piece_captures.py  edge_players.py  egdb.cpp  mcts.py  mcts_common.py  mcts_default.py  mcts_edge1.py  mcts_edge2.py  mcts_traps.py  play.cpp  play_games.py  playout.py  search.cpp  search_egdb_positions.py  simulation.py
games/: wiersma.pdn
include/: bb_index.hpp  common.hpp  hub.hpp  main.hpp  terminal.hpp
include/draughts/: egdb.h  pdn.h  scan.h  utilities.h
include/scan/: bb_base.hpp  bb_comp.hpp  bb_index.hpp  bit.hpp  book.hpp  common.hpp  dxp.hpp  eval.hpp  fen.hpp  game.hpp  gen.hpp  hash.hpp  hub.hpp  list.hpp  move.hpp  pos.hpp  score.hpp  search.hpp  socket.hpp  sort.hpp  terminal.hpp  thread.hpp  tt.hpp  util.hpp  var.hpp
python/: setup.py
python/examples/: edge_players.py  mcts.py  mcts_default.py  mcts_edge1.py  mcts_edge2.py  mcts_no_forced_moves_example.py  mcts_traps.py
python/tests/: test_egdb.py  test_pdn.py  test_search.py  test_simulate.py
src/: bb_base.cpp  bb_comp.cpp  bb_index.cpp  bit.cpp  book.cpp  common.cpp  dxp.cpp  eval.cpp  fen.cpp  game.cpp  gen.cpp  hash.cpp  hub.cpp  libmy.cpp  list.cpp  main.cpp  move.cpp  pos.cpp  score.cpp  search.cpp  socket.cpp  sort.cpp  terminal.cpp  thread.cpp  tt.cpp  util.cpp  var.cpp
tests/: CMakeLists.txt  scan.ini  test1.py  test_egdb.py  test_pdn.py  test_position.py  test_search.py  test_simulate.py
tools/: python-bindings.cpp  scan.cpp
